# ANN-ActivationFunction-sigmoid-relu-tanh

./: .gitignore  README.md  activation_functions.py  ann.pptx  comparison.ipynb  plot_main.py  plots_create.py  pyproject.toml  requirements.txt
