[project]
name = "activationfunction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
